@@ -1,5 +1,10 @@
 2012-06-12 Dario Rodriguez <dario.rodriguez@artica.es>
 
+        * lib/PandoraFMS/Core.pm: Fixed an error with group_statistics agent
+        queries.
+
+2012-06-12 Dario Rodriguez <dario.rodriguez@artica.es>
+
 	* lib/PandoraFMS/Core.pm: Fixed an error with group_statistics agent
 	queries.
 
